<resources>
    <string name="mapbox_public_access_token">pk.eyJ1IjoiYmlnb3dsIiwiYSI6ImNraHZlODJ5YzFjdDMyc295azJ1YTdwZWQifQ.yqOHWYeuQPXphvSkx2NAQA</string>

    <string name="app_name">BigOwlApp</string>

    <string name="send_sms">send sms</string>
    <string name="by">by</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="first_name">First Name</string>
    <string name="group_name">Group Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_search_user">Search user…</string>
    <string name="home">Home</string>
    <string name="image_url">Image URL</string>
    <string name="last_name">Last name</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="phone_number">Phone number</string>
    <string name="Fingerprint_authentication">Fingerprint authentication :</string>
    <string name="refresh">Refresh</string>
    <string name="sign_up">Sign Up</string>
    <string name="supervisor_name">supervisor_name</string>
    <string name="user_avatar">User Avatar</string>
    <string name="user_email">user_email</string>
    <string name="user_first_name">First Name</string>
    <string name="user_last_name">Last Name</string>
    <string name="user_phone_number">user_phone_number</string>
    <string name="set_schedule">Set Schedule</string>
    <string name="create_new_schedule">Create New Schedule</string>
    <string name="end_date">End Date</string>
    <string name="start_date">Start Date</string>
    <string name="title">Title</string>
    <string name="hh_mm">hh:mm</string>
    <string name="select_group">Select Group</string>
    <string name="users_icon">users_icon</string>
    <string name="select_users">Select User(s)</string>
    <string name="mm_dd_yyyy">mm/dd/yyyy</string>
    <string name="group_icon">group_icon</string>
    <string name="select_location">Select Location</string>
    <string name="log_out">Log out</string>
    <string name="overflow_menu">overflow menu</string>
    <string name="schedule">schedule</string>
    <string name="user">user</string>
    <string name="notification">notification</string>
    <string name="big_owl">Big Owl</string>
    <string name="search_user">Search User</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="group_supervisor">Group Supervisor</string>
    <string name="end_time">End Time</string>
    <string name="you_last">You last</string>
    <string name="this_schedule_on">this schedule on</string>
    <string name="schedule_list">Schedules</string>
    <string name="schedule_title">Schedules title</string>
    <string name="schedule_start_time">Schedules Start time</string>
    <string name="inspect">inspect</string>
    <string name="general_location_justification">
        Location detection is required to check whether you have arrived to a scheduled location.\n\n
        If not provided, the system will assume you have not arrived to the location.
    </string>
    <string name="background_location_justification">
        Location access must be set to <b>Allow all the time</b> for background location access.\n\n
        Your location will be verified at the scheduled time without having to worry the app being open.
    </string>
    <string name="view_schedule">View Schedule</string>
    <string name="create_schedule">create schedule"</string>
    <string name="till">till</string>
    <string name="at">at</string>
    <string name="member_name">member_name</string>
    <string name="member_attendance">member_attendance</string>
    <string name="from">from</string>
    <string name="schedule_report_title">schedule_report_title</string>
    <string name="schedule_report_start_time">schedule_report_start_time</string>
    <string name="schedule_report_end_time">schedule_report_end_time</string>
    <string name="schedule_report_location">schedule_report_location</string>
    <string name="member_attendance_time">member_attendance_time</string>
    <string name="wiki_page_manual">Wiki Page Manual</string>
    <string name="wiki_page_manual_uri">"https://github.com/Landry333/Big-Owl/wiki/Manual"</string>
    <string name="notification_time">Time</string>
    <string name="notification_page">Notifications</string>
    <string name="notification_content">Content</string>
    <string name="notification_name">Name</string>
    <string name="your_attendance_result">Your attendance result:</string>
    <string name="propose_fingerprint_auth">
        Add fingerprint authentication to secure your account?\n\n
        NOTE: This will also make your account ONLY accessible by a device having sim
        card_1 number same as the phone number you saved in your account
    </string>
    <string name="no_compatibility_with_phone">
        Sorry, this additional security service is not available on
        this number or with your phone and telephony provider\n\n
        SERVICE IS NOT ALLOWED\n\n
        First make sure sim card_1 number on this phone is the same as in your account
    </string>
    <string name="is_fingerprint_auth_registered">
        You are registered to fingerprint authentication.\n\n
        You can modify your choice on Edit profile
    </string>
    <string name="not_allowed">
        You are not allowed to access this account\n\n
        Sim card_1 number on this phone should be the same as in your account
    </string>
    <string name="use_your_contacts_list">use your contacts list</string>
    <string name="edit_profile">Edit profile</string>
    <string name="enter_your_choice_yes_or_no">Enter your choice, YES or NO</string>
    <string name="fingerprint_authentication">Fingerprint authentication</string>
    <string name="authentication_message">authentication_message</string>
    <string name="go_to_home_page">Go to home page</string>
    <string name="start_fingerprint_authentication">start fingerprint authentication</string>
    <string name="authentication_result_message">authentication_result_message</string>
    <string name="add">ADD</string>
    <string name="maybe_later">MAYBE LATER</string>
    <string name="i_supervise">I supervise</string>
    <string name="supervising_me">supervising me</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password_don_t_have_an_account">Forgot password? Don\'t have an account?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in_here">Sign in here</string>
    <string name="supervision_groups">supervision groups</string>
    <string name="select_a_group_to_see_your_schedule_in_the_group">select a group to see your schedule in the group</string>
    <string name="my_scheduled">my scheduled</string>
    <string name="add_user">add user</string>
    <string name="choose_a_contact_to_supervise_or_to_invite_for_registration">Choose a contact to supervise or to invite for registration</string>
    <string name="group">Group</string>
    <string name="supervisor">Supervisor</string>
    <string name="starts">Starts</string>
    <string name="ends">Ends</string>
    <string name="search">Search…</string>
    <string name="description_bigowl_logo">BigOwl Logo</string>
    <string name="biometric_not_supported">Biometric Not Supported on this phone</string>
    <string name="not_allowed_error">NOT ALLOWED</string>
    <string name="failed_auth">Failed authentication</string>
    <string name="auth_result_error">Error</string>
    <string name="location">Location</string>
    <string name="send_request">Send request</string>
    <string name="cancel_request">Cancel request</string>
    <string name="cant_send">Can not send</string>
    <string name="send_new_request">Send new request</string>
    <string name="can_cancel">Your request is pending. You can cancel it</string>
    <string name="no_request">You presently have NO request to supervise this user</string>
    <string name="no_self_request">This contact matches you as a contact. You can\'t send a request to yourself</string>
    <string name="supervising_already">You already have an accepted request to supervise this user</string>
    <string name="request_rejected">Your last request was rejected by this user. You can send a new request</string>
</resources>