...
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="?attr/colorPrimary" />

        <ImageButton
            android:id="@+id/action_notification"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:contentDescription="@string/notification"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_notification"
            android:tint="?attr/colorPrimary" />

        <View
            android:layout_width="1dp"
...
