...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ScheduleViewRespondActivity">

    <include
        android:id="@+id/top_app_bar"
        layout="@layout/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/linear_layout_schedule_view"
...
            android:textSize="18sp"
            android:textColor="@color/white"
            android:backgroundTint="@android:color/holo_red_light"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button_accept"
            android:background="@drawable/rounded_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
...
